// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignNode campaign without description 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesetsStats": Object {
        "closed": 3,
        "merged": 0,
        "open": 1,
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": null,
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={[Function]}
>
  <span
    className="campaign-node__separator"
  />
  <span
    className="campaign-node__badge badge badge-success text-uppercase"
  >
    Open
  </span>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-md-flex d-block align-items-baseline"
    >
      <h3
        className="m-0 d-md-inline-block d-block campaign-node__title"
      >
        <div
          className="d-md-inline-block d-block"
        >
          <AnchorLink
            className="text-muted test-campaign-namespace-link"
            to="/users/alice/campaigns"
          >
            <a
              className="text-muted test-campaign-namespace-link"
              href="/users/alice/campaigns"
            >
              alice
            </a>
          </AnchorLink>
          <span
            className="text-muted d-inline-block mx-1"
          >
            /
          </span>
        </div>
        <AnchorLink
          className="test-campaign-link mr-2"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link mr-2"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="text-muted d-sm-block"
      >
        created 
        <Timestamp
          date="2019-12-04T23:15:01Z"
          now={[Function]}
        >
          <span
            className="timestamp"
            data-tooltip="2019-12-04T23:15:01Z"
          >
            in 11 months
          </span>
        </Timestamp>
      </small>
    </div>
    <Markdown
      className="text-truncate d-none d-md-block text-muted font-italic"
      dangerousInnerHTML="No description"
      history="[History]"
    >
      <div
        className="text-truncate d-none d-md-block text-muted font-italic markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "No description",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-success d-block d-sm-flex"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    className="d-block d-sm-flex text-center"
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-danger d-block d-sm-flex text-center"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-merged d-block d-sm-flex"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode closed campaign 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesetsStats": Object {
        "closed": 3,
        "merged": 0,
        "open": 1,
      },
      "closedAt": "2019-12-04T23:19:01Z",
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={[Function]}
>
  <span
    className="campaign-node__separator"
  />
  <span
    className="campaign-node__badge badge badge-danger text-uppercase"
  >
    Closed
  </span>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-md-flex d-block align-items-baseline"
    >
      <h3
        className="m-0 d-md-inline-block d-block campaign-node__title"
      >
        <div
          className="d-md-inline-block d-block"
        >
          <AnchorLink
            className="text-muted test-campaign-namespace-link"
            to="/users/alice/campaigns"
          >
            <a
              className="text-muted test-campaign-namespace-link"
              href="/users/alice/campaigns"
            >
              alice
            </a>
          </AnchorLink>
          <span
            className="text-muted d-inline-block mx-1"
          >
            /
          </span>
        </div>
        <AnchorLink
          className="test-campaign-link mr-2"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link mr-2"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="text-muted d-sm-block"
      >
        created 
        <Timestamp
          date="2019-12-04T23:15:01Z"
          now={[Function]}
        >
          <span
            className="timestamp"
            data-tooltip="2019-12-04T23:15:01Z"
          >
            in 11 months
          </span>
        </Timestamp>
      </small>
    </div>
    <Markdown
      className="text-truncate d-none d-md-block"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate d-none d-md-block markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-success d-block d-sm-flex"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    className="d-block d-sm-flex text-center"
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-danger d-block d-sm-flex text-center"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-merged d-block d-sm-flex"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode open campaign 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesetsStats": Object {
        "closed": 3,
        "merged": 0,
        "open": 1,
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={[Function]}
>
  <span
    className="campaign-node__separator"
  />
  <span
    className="campaign-node__badge badge badge-success text-uppercase"
  >
    Open
  </span>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-md-flex d-block align-items-baseline"
    >
      <h3
        className="m-0 d-md-inline-block d-block campaign-node__title"
      >
        <div
          className="d-md-inline-block d-block"
        >
          <AnchorLink
            className="text-muted test-campaign-namespace-link"
            to="/users/alice/campaigns"
          >
            <a
              className="text-muted test-campaign-namespace-link"
              href="/users/alice/campaigns"
            >
              alice
            </a>
          </AnchorLink>
          <span
            className="text-muted d-inline-block mx-1"
          >
            /
          </span>
        </div>
        <AnchorLink
          className="test-campaign-link mr-2"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link mr-2"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="text-muted d-sm-block"
      >
        created 
        <Timestamp
          date="2019-12-04T23:15:01Z"
          now={[Function]}
        >
          <span
            className="timestamp"
            data-tooltip="2019-12-04T23:15:01Z"
          >
            in 11 months
          </span>
        </Timestamp>
      </small>
    </div>
    <Markdown
      className="text-truncate d-none d-md-block"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate d-none d-md-block markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-success d-block d-sm-flex"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    className="d-block d-sm-flex text-center"
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-danger d-block d-sm-flex text-center"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-merged d-block d-sm-flex"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode open campaign on user page 1`] = `
<CampaignNode
  displayNamespace={false}
  history="[History]"
  node={
    Object {
      "changesetsStats": Object {
        "closed": 3,
        "merged": 0,
        "open": 1,
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={[Function]}
>
  <span
    className="campaign-node__separator"
  />
  <span
    className="campaign-node__badge badge badge-success text-uppercase"
  >
    Open
  </span>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-md-flex d-block align-items-baseline"
    >
      <h3
        className="m-0 d-md-inline-block d-block campaign-node__title"
      >
        <AnchorLink
          className="test-campaign-link mr-2"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link mr-2"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="text-muted d-sm-block"
      >
        created 
        <Timestamp
          date="2019-12-04T23:15:01Z"
          now={[Function]}
        >
          <span
            className="timestamp"
            data-tooltip="2019-12-04T23:15:01Z"
          >
            in 11 months
          </span>
        </Timestamp>
      </small>
    </div>
    <Markdown
      className="text-truncate d-none d-md-block"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate d-none d-md-block markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-success d-block d-sm-flex"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    className="d-block d-sm-flex text-center"
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-danger d-block d-sm-flex text-center"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    className="d-block d-sm-flex"
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap flex-column align-items-center justify-content-center text-merged d-block d-sm-flex"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;
